tests/error/pointer_to_tuple_decomposition.bz
// error: invalid type '*[i32]' for tuple decomposition
function main()
{
	let t = [i32]();
	let *[_] = &t;
}
